language/move-lang/tests/move_check/typing/loop_result_type_invalid.exp
error[E04007]: incompatible types
   ┌─ tests/move_check/typing/loop_result_type_invalid.move:11:9
   │
10 │     fun t0(): X::R {
   │               ---- Expected: '0x2::X::R'
11 │         loop { if (false) break }
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^
   │         │
   │         Invalid return expression
   │         Given: '()'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/loop_result_type_invalid.move:15:9
   │
14 │     fun t1(): u64 {
   │               --- Expected: 'u64'
15 │         loop { let x = 0; break }
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^
   │         │
   │         Invalid return expression
   │         Given: '()'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/loop_result_type_invalid.move:19:9
   │
19 │         foo(loop { break })
   │         ^^^^^^^^^^^^^^^^^^^
   │         │   │
   │         │   Given: '()'
   │         Invalid call of '0x2::M::foo'. Invalid argument for parameter 'x'
   ·
22 │     fun foo(x: u64) {}
   │                --- Expected: 'u64'

error[E04005]: expected a single type
   ┌─ tests/move_check/typing/loop_result_type_invalid.move:25:13
   │
25 │         let x = loop { break };
   │             ^   -------------- Expected a single type, but found expression list type: '()'
   │             │    
   │             Invalid type for local

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/loop_result_type_invalid.move:26:13
   │
26 │         let (x, y) = loop { if (false) break };
   │             ^^^^^^   ------------------------- Given: '()'
   │             │         
   │             Invalid value for binding
   │             Expected: '(_, _)'

